--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
             <div>
                 <i class="fa-solid fa-terminal"></i>
                 <h2 class="services-byme">CPP</h2>
-                <p class="services-byme">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                      Ut enim ad minim veniam.2</p>
+                <p class="services-byme">Experienced C++ programmer with a proven track record of creating 
+                    efficient and robust solutions. Proficient in algorithm design and software development, 
+                    I excel at leveraging C++ to tackle complex challenges. Explore my portfolio to see examples 
+                    of my work and how I can bring value to your projects.</p>
                 <a href="#" class="services-byme">Learn more(addlink2)</a>
             </div>
             <div>
