--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                     <input type="hidden" name="_captcha" value="false"> <!--for recaptcha disabling-->
                     <!--<input type="hidden" name="_cc" value="/el/zanosi">--> <!---Second reciever email-->
-                    <input type="hidden" name="_next" value="https://www.google.com/"> <!--update thanks page-->
+                    <input type="hidden" name="_next" value="https://ashrefber.me/"> <!--update thanks page-->
                     <input type="hidden" name="_template" value="table"> <!-- design form-->
                     <button type="submit" class="btn btn2" >Submit</button>
                 </form>
