--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
                 </div>
                 <div class="tab-contents active-tab" id="skills" >
                     <ul>
-                        <li><span>Development</span><br>Websites</li>
-                        <li><span>Design</span><br>Banners</li>
-                        <li><span>Other</span><br>Other</li>
+                        <li><span>Development</span><br>Skilled in designing engaging websites with a focus on user experience and visual appeal</li>
+                        <li><span>Design</span><br>Proficient in designing eye-catching banners and media posts for diverse platforms.</li>
+                        <li><span>Data Analysis</span><br>Proficient in Python data analysis and machine learning, driven by a passion for real-world data applications</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="experience" >
                     <ul>
-                        <li><span>Experience</span><br>Experiecne</li>
-                        <li><span>Design</span><br>Banners</li>
-                        <li><span>Other</span><br>Other</li>
+                        <li><span>Development</span><br>In my development experience, I've built small project websites including an ecommerce platform and a healthcare site. Currently, I'm working on others, like my portfolio site, as part of ongoing learning</li>
+                        <li><span>Design</span><br>I've crafted posts and logos for scientific clubs, blending creativity with technical precision</li>
+                        <li><span>Data Analysis</span><br>In data analysis, I participated in a hackathon hosted by GDSC, achieving a top 5 ranking. Continuously learning and honing skills in data analysis.</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
@@ -67,7 +67,7 @@
                         <li><span>Baccalauréat Exam (2023)</span><br><br>• Obtained a grade of 18.28/20 in the Experimental Science field.
                             <br>• Ranked first in the state.</li>
                         <li><span>Current Studies</span><br><br>• Pursuing Ai Engineering at ENSiA since 2023.</li>
-                        <li><span>Other</span><br>Other</li>
+                        <li><span>Self-Learning</span><br>I actively engage in learning through participation and organization of activities and workshops in scientific and tech clubs. Additionally, I pursue continuous learning via online courses on various platforms.</li>
                     </ul>
                 </div>
             </div>
