--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                         <li><span>Baccalauréat Exam (2023)</span><br><br>• Obtained a grade of 18.28/20 in the Experimental Science field.
                             <br>• Ranked first in the state.</li>
                         <li><span>Current Studies</span><br><br>• Pursuing Ai Engineering at ENSiA since 2023.</li>
-                        <li><span>Self-Learning</span><br>I actively engage in learning through participation and organization of activities and workshops in scientific and tech clubs. Additionally, I pursue continuous learning via online courses on various platforms.</li>
+                        <li><span>Self-Learning</span><br>I actively engage in learning through participation and organization of activities
+                            and workshops in scientific and tech clubs. Additionally, I pursue continuous learning via online courses on 
+                            various platforms.</li>
                     </ul>
                 </div>
             </div>
@@ -93,20 +95,20 @@
             </div>
             <div>
                 <i class="fa-solid fa-terminal"></i>
-                <h2 class="services-byme">CPP</h2>
-                <p class="services-byme">Experienced C++ programmer with a proven track record of creating 
-                    efficient and robust solutions. Proficient in algorithm design and software development, 
-                    I excel at leveraging C++ to tackle complex challenges. Explore my portfolio to see examples 
-                    of my work and how I can bring value to your projects.</p>
-                <a href="#" class="services-byme">Learn more(addlink2)</a>
+                <h2 class="services-byme">Data Analysis</h2>
+                <p class="services-byme">I offer expertise in extracting actionable insights from complex datasets.
+                    Leveraging advanced statistical techniques and machine learning algorithms, I provide comprehensive analysis
+                    and predictive modeling solutions tailored to address specific business challenges, empowering clients to make
+                    informed decisions and drive strategic growth.</p>
+                <a href="#" class="services-byme">Learn more</a>
             </div>
             <div>
                 <i class="fa-solid fa-crop-simple"></i>
                 <h2 class="services-byme">Design</h2>
-                <p class="services-byme">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam.3</p>
-                <a href="#" class="services-byme">Learn more(addlink3)</a>
+                <p class="services-byme">I provide comprehensive design services encompassing the creation of visually
+                    appealing logos, dynamic banners, and engaging media posts. With a keen eye for detail and a focus
+                    on client satisfaction, I tailor each design to effectively convey the desired message and captivate the audience.</p>
+                <a href="#" class="services-byme">Learn more</a>
             </div>
         </div>
     </div>
