--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <li><span>Baccalauréat Exam (2023)</span><br><br>• Obtained a grade of 18.28/20 in the Experimental Science field.
                             <br>• Ranked first in the state.</li>
                         <li><span>Current Studies</span><br><br>• Pursuing Ai Engineering at ENSiA since 2023.</li>
-                        <li><span>Self-Learning</span><br>I actively engage in learning through participation and organization of activities
+                        <li><span>Self-Learning</span><br>• I actively engage in learning through participation and organization of activities
                             and workshops in scientific and tech clubs. Additionally, I pursue continuous learning via online courses on 
                             various platforms.</li>
                     </ul>
@@ -155,7 +155,7 @@
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
                 <p><i class="fa-solid fa-envelope"></i>berbaouiachraf@gmail.com</p>
-                <p><i class="fa-solid fa-phone"></i>+213-656357869</p>
+                <p><i class="fa-solid fa-phone"></i>+213-794131551</p>
                 <div class="social-icons">
                     <a href="https://www.instagram.com/ashreeeeeef/"><i class="fa-brands fa-instagram" target="_blank"></i></a>
                     <a href="https://web.facebook.com/ashref.ber"><i class="fa-brands fa-facebook" target="_blank"></i></a>
