--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/21.04.10.00.50-1618012233.1726-51068942.jpeg" alt=""> <!---- Add images later with same height!-->
+                    <img src="images/DS.jpg" alt=""> <!---- Add images later with same height!-->
                     <div class="layer">
                         <h3>Work 1 I did</h3>
                         <p>Here Write what you wanna tell about you work</p>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/iphone_xr_64_gb_1652973168_4a12f717_progressive.jpg" alt="">
+                    <img src="images/sahtek.png" alt="">
                     <div class="layer">
                         <h3>Work 2 I did</h3>
                         <p>Here Write what you wanna tell about you work</p>
