--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <a href="https://www.linkedin.com/in/ashref-berbaoui-660070287" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/Ashref1"><i class="fa-brands fa-github" target="_blank"></i></a>
                 </div>
-                <a href="" download class="btn btn2">Download CV</a>  <!--------cv link----------->
+                <a href="CV.pdf" download class="btn btn2">Download CV</a>  <!--------cv link----------->
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet" action="https://formsubmit.co/c7972cf99ff1df6772aeb478a30d9468" method="POST">
