--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/iphone_xr__white__128gb_1651676109_7c004ee5_progressive.jpg" alt="">
+                    <img src="images/opimage" alt="">
                     <div class="layer">
                         <h3>Work 3 I did</h3>
                         <p>Here Write what you wanna tell about you work</p>
