--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <img src="images/sahtek.png" alt="">
                     <div class="layer">
                         <h3>Sahtek Platform</h3>
-                        <p>A HealthCare platfomr, still under-built</p>
+                        <p>A HealthCare platform, still under-built</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
