--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/sahtek.png" alt="">
+                    <img src="images/First.jpg" alt="">
                     <div class="layer">
-                        <h3>Sahtek Platform</h3>
-                        <p>A HealthCare platform, still under-built</p>
+                        <h3>ENSIApedia</h3>
+                        <p>An educational platform, still under-built</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
