--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="layer">
                         <h3>ENSIApedia</h3>
                         <p>An educational platform, still under-built</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://ensiapedia.vercel.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
