--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/First.jpg" alt="">
+                    <img src="images/First.png" alt="">
                     <div class="layer">
                         <h3>ENSIApedia</h3>
                         <p>An educational platform, still under-built</p>
