--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> <!--Add link to your work-->
                     </div>
                 </div>
-                <div class="work">
+                <!-- <div class="work">
                     <img src="images/First.png" alt="">
                     <div class="layer">
                         <h3>ENSIApedia</h3>
                         <p>An educational platform, still under-built</p>
                         <a href="https://ensiapedia.vercel.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
-                </div>
+                </div> -->
                 <div class="work">
                     <img src="images/opimage" alt="">
                     <div class="layer">
@@ -162,7 +162,7 @@
                     <a href="https://www.linkedin.com/in/ashref-berbaoui-660070287" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/Ashref1"><i class="fa-brands fa-github" target="_blank"></i></a>
                 </div>
-                <a href="CV.pdf" download class="btn btn2">Download CV</a>  <!--------cv link----------->
+                <!-- <a href="CV.pdf" download class="btn btn2">Download CV</a>  ------cv link--------- -->
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet" action="https://formsubmit.co/c7972cf99ff1df6772aeb478a30d9468" method="POST">
